Fix image tag media urls in wishlist, fix the small screen alert on order history to show only on small screens when there are previous orders to display

--- a/profiles/static/profiles/css/profiles.css
+++ b/profiles/static/profiles/css/profiles.css
@@ -5,3 +5,14 @@
 .badge {
     font-size: 0.75rem;
 }
+
+.small-screen-alert-container {
+    display: none;
+}
+
+@media screen and (max-width: 573px) {
+
+    .small-screen-alert-container {
+        display: block;
+    }
+}
